<resources>
    <string name="app_name">Погода</string>
    <string name="weather_detail_icon">Иконка деталей погоды</string>
    
    <string name="today">Сегодня</string>
    <string name="humidity">Влажность</string>
    <string name="wind">Ветер</string>
    <string name="rain">Дождь</string>
    <string name="visibility">Видимость</string>
    <string name="sunrise">Восход</string>
    <string name="sunset">Закат</string>
    <string name="high">Макс</string>
    <string name="low">Мин</string>
    <string name="precipitation">Осадки</string>
    <string name="unknown">Неизвестно</string>
    <string name="loading">Загрузка...</string>
    <string name="error_loading">Ошибка загрузки данных</string>
    <string name="add_location">Добавить город</string>
    <string name="current_location">Текущее местоположение</string>
    <string name="m_s">м/с</string>
    <string name="km">км</string>
    <string name="locations">Местоположения</string>
    <string name="search_city">Поиск города</string>
    <string name="forecast_7_days">Прогноз на 7 дней</string>
    <string name="nav_now">Сейчас</string>
    <string name="nav_forecast">Прогноз</string>
    <string name="nav_locations">Места</string>
    <string name="high_low_temp">В:%1$d%2$s Н:%3$d%4$s</string>
    <string name="humidity_value">%1$d%%</string>
    <string name="wind_value">%1$d м/с</string>
    <string name="rain_value">%1$d%%</string>
    <string name="visibility_value">%1$d км</string>
</resources>
