<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/nav_current">

    <fragment
        android:id="@+id/nav_current"
        android:name="com.example.ourproject.current.CurrentWeatherFragment"
        android:label="@string/nav_now">
        <argument
            android:name="selected_city"
            app:argType="string"
            android:defaultValue="@null" />
    </fragment>

    <fragment
        android:id="@+id/nav_forecast"
        android:name="com.example.ourproject.forecast.ForecastFragment"
        android:label="@string/nav_forecast">
        <argument
            android:name="selected_city"
            app:argType="string"
            android:defaultValue="@null" />
    </fragment>

    <fragment
        android:id="@+id/nav_locations"
        android:name="com.example.ourproject.locations.LocationsFragment"
        android:label="@string/nav_locations" />

</navigation>

